@@ -164,7 +164,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.12.1</version>
+            <version>3.12.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
