@@ -13,9 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-
 package io.restassured.internal
+
+import groovy.transform.Canonical
+import io.restassured.specification.Argument
 
 import static io.restassured.internal.common.assertion.AssertParameter.notNull
 
@@ -25,38 +26,56 @@ class MapCreator {
     MERGE, OVERWRITE
   }
 
-  def static Map<String, Object> createMapFromParams(CollisionStrategy collisionStrategy,
-                                                     String firstParam, Object firstValue, ... parameters) {
-    return createMapFromObjects(collisionStrategy, createArgumentArrayFromKeyAndValue(firstParam, firstValue, parameters));
+  static Map<String, Object> createMapFromParams(CollisionStrategy collisionStrategy,
+                                                 String firstParam, Object firstValue, ... parameters) {
+    return createMapFromObjects(collisionStrategy, createArgumentArrayFromKeyAndValue(firstParam, firstValue, parameters))
   }
 
-  def static Map<String, Object> createMapFromParams(CollisionStrategy collisionStrategy, String firstParam, ... parameters) {
-    return createMapFromObjects(collisionStrategy, createArgumentArray(firstParam, parameters));
+  static Map<String, Object> createMapFromParams(CollisionStrategy collisionStrategy, String firstParam, ... parameters) {
+    return createMapFromObjects(collisionStrategy, createArgumentArray(firstParam, parameters))
   }
 
-  def static Map<String, Object> createMapFromObjects(CollisionStrategy collisionStrategy, ... parameters) {
+  static Map<String, Object> createMapFromObjects(CollisionStrategy collisionStrategy, ... parameters) {
     if (parameters == null || parameters.length < 2) {
-      throw new IllegalArgumentException("You must supply at least one key and one value.");
-    } else if (parameters.length % 2 != 0) {
+      throw new IllegalArgumentException("You must supply at least one key and one value.")
+    } else if (parameters.length % 2 != 0 && parameters.length % 3 != 0) {
       throw new IllegalArgumentException("You must supply the same number of keys as values.")
     }
 
-    Map<String, Object> map = new LinkedHashMap<String, Object>();
-    for (int i = 0; i < parameters.length; i += 2) {
+    int step = parameters.length % 2 == 0 ? 2 : 3
+    boolean argumentsDefined = step == 3
+    Map<String, Object> map = new LinkedHashMap<String, Object>()
+    for (int i = 0; i < parameters.length; i += step) {
       def key = parameters[i]
-      def val = parameters[i + 1]
+      def args
+      def val
+      if (!argumentsDefined) {
+        args = null
+        val = parameters[i + 1]
+      } else {
+        args = parameters[i + 1]
+        val = parameters[i + 2]
+        if (!(args instanceof List && args.every { it instanceof Argument })) {
+          throw new IllegalArgumentException("Illegal argument '$args' passed to body expectation '$key', a list of ${Argument.class.name} is required.")
+        }
+      }
+
       if (map.containsKey(key) && collisionStrategy == CollisionStrategy.MERGE) {
         def currentValue = map.get(key)
+        def value = argumentsDefined ? new ArgsAndValue(args, val) : val
         if (currentValue instanceof List) {
-          currentValue << val
+          currentValue << value
         } else {
-          map.put(key, [currentValue, val])
+          map.put(key, [currentValue, value])
         }
+      } else if (argumentsDefined) {
+        map.put(key, new ArgsAndValue(args, val))
       } else {
         map.put(key, val)
       }
     }
-    return map;
+
+    return map
   }
 
   private static Object[] createArgumentArray(String firstParam, ... parameters) {
@@ -83,4 +102,11 @@ class MapCreator {
     }
     return params as Object[]
   }
+
+  @Canonical
+  static class ArgsAndValue {
+    List<Argument> args
+    def value
+  }
+
 }
